--- a/templates/base.html
+++ b/templates/base.html
@@ -163,11 +163,11 @@
                                 <label for="client_email" class="control-label">Email</label>
                                 <input type="text" class="form-control" id="client_email" name="client_email">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" style="display: none;">
                                 <label for="client_allocated_ips" class="control-label">IP Allocation</label>
                                 <input type="text" data-role="tagsinput" class="form-control" id="client_allocated_ips">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" style="display: none;">
                                 <label for="client_allowed_ips" class="control-label">Allowed IPs
                                     <i class="fas fa-info-circle" data-toggle="tooltip"
                                        data-original-title="Specify a list of addresses that will get routed to the
@@ -177,7 +177,7 @@
                                 <input type="text" data-role="tagsinput" class="form-control" id="client_allowed_ips"
                                     value="0.0.0.0/0">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" style="display: none;">
                                 <label for="client_extra_allowed_ips" class="control-label">Extra Allowed IPs
                                     <i class="fas fa-info-circle" data-toggle="tooltip"
                                        data-original-title="Specify a list of addresses that will get routed to the
@@ -186,7 +186,7 @@
                                 </label>
                                 <input type="text" data-role="tagsinput" class="form-control" id="client_extra_allowed_ips">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" style="display: none;">
                                 <div class="icheck-primary d-inline">
                                     <input type="checkbox" id="use_server_dns" checked>
                                     <label for="use_server_dns">
@@ -194,7 +194,7 @@
                                     </label>
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" style="display: none;">
                                 <div class="icheck-primary d-inline">
                                     <input type="checkbox" id="enabled" checked>
                                     <label for="enabled">
