--- a/templates/clients.html
+++ b/templates/clients.html
@@ -100,16 +100,16 @@ Wireguard Clients
                         <label for="_client_allocated_ips" class="control-label">IP Allocation</label>
                         <input type="text" data-role="tagsinput" class="form-control" id="_client_allocated_ips">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" style="display: none;">
                         <label for="_client_allowed_ips" class="control-label">Allowed IPs</label>
-                        <input type="text" data-role="tagsinput" class="form-control" id="_client_allowed_ips">
+                        <input disabled type="text" data-role="tagsinput" class="form-control" id="_client_allowed_ips">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" style="display: none;">
                         <label for="_client_extra_allowed_ips" class="control-label">Extra Allowed IPs</label>
-                        <input type="text" data-role="tagsinput" class="form-control"
+                        <input disabled type="text" data-role="tagsinput" class="form-control"
                                id="_client_extra_allowed_ips">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" style="display: none;">
                         <div class="icheck-primary d-inline">
                             <input type="checkbox" id="_use_server_dns">
                             <label for="_use_server_dns">
@@ -117,7 +117,7 @@ Wireguard Clients
                             </label>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" style="display: none;">
                         <div class="icheck-primary d-inline">
                             <input type="checkbox" id="_enabled">
                             <label for="_enabled">
